--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "jquery": "~2.1.4",
     "animate.css": "~3.3.0",
     "bootstrap": "~3.3.5",
-    "font-awesome": "~4.4.0"
+    "font-awesome": "~4.4.0",
+    "pace": "~1.0.2"
   }
 }
